# Retrieval-Intelligence-Platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  EMBEDDING_VALIDATION_REVIEW_REPORT.md  FINAL_CODE_REVIEW.md  FINAL_RELEASE_VERIFICATION.md  LICENSE  README.md  REPOSITORY_CLEANUP_REPORT.md  REPOSITORY_FILE_AUDIT.md  SYSTEM_ACCEPTANCE_REPORT.md  TODO.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-runtime.txt  requirements.txt
.github/workflows/: ci.yml
backend/api/: __init__.py  app.py  config.py  dependencies.py  middleware.py  observability.py
backend/api/routers/: chat.py  documents.py  evaluation.py  experiments.py  health.py  retreval.py  retrieval.py  settings.py
backend/api/schemas/: __init__.py
backend/configs/: __init__.py  settings.py
backend/core/: exceptions.py
backend/data/chunking/: __init__.py  base_chunker.py  factory.py  markdown_chunker.py  recursive_chunker.py  sentence_chunker.py  validator.py
backend/data/embeddings/: __init__.py  base_embedding_provider.py  embedding_batch_processor.py  embedding_cache.py  embedding_factory.py  embedding_metadata.py  embedding_pipeline.py  embedding_validator.py  sentence_transformer_provider.py
backend/data/evaluation/: evaluation_engine.py
backend/data/loaders/: __init__.py  base_loader.py  docx_loader.py  loader_factory.py  markdown_loader.py  pdf_loader.py  txt_loader.py
backend/data/preprocessing/: __init__.py  text_cleaner.py
backend/embedding_validation/: __init__.py  benchmark_report.py  duplicate_detector.py  embedding_benchmark.py  embedding_profiler.py  embedding_statistics.py  embedding_validator.py  embedding_visualizer.py  exceptions.py  similarity_analyzer.py  validation_result.py  validation_runner.py
backend/embeddings/: __init__.py  base_embedding_provider.py  embedding_batch_processor.py  embedding_cache.py  embedding_factory.py  embedding_metadata.py  embedding_pipeline.py  embedding_validator.py  sentence_transformer_provider.py
backend/enterprise/: __init__.py  config.py  database.py  exporters.py  models.py  oauth.py  rbac.py  routers.py  schemas.py  security.py  services.py
backend/evaluation/core/: ragas_evaluator.py
backend/generation/: __init__.py  exceptions.py  generation_pipeline.py  models.py
backend/generation/pipeline_components/: __init__.py  citation_generator.py  context_builder.py  hallucination_guard.py  llm_gateway.py  prompt_builder.py  response_validator.py
backend/generation/providers/: anthropic_provider.py  base_provider.py  nim_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py
backend/pipeline/: __init__.py  rag_pipeline.py
backend/retrieval/: __init__.py  exceptions.py  intelligent_retrieval_pipeline.py  retrieval_engine.py  retrieval_filters.py  retrieval_metadata.py  retrieval_pipeline.py  retrieval_ranker.py  retrieval_request.py  retrieval_result.py
backend/retrieval/fusion/: rrf_fusion.py
backend/retrieval/query_expansion/: query_expander.py
backend/retrieval/rerank/: base_reranker.py  cross_encoder_reranker.py
backend/retrieval/sparse/: bm25_retriever.py
backend/retrieval/topk/: dynamic_topk.py
backend/retrieval/utils/: analytics.py
backend/tests/: conftest.py
backend/tests/enterprise/: conftest.py  fixtures.py  helpers.py  test_admin_api.py  test_auth_api.py  test_conversations_api.py  test_exporters.py  test_rbac.py  test_security.py  test_services.py  test_users_api.py  test_workspaces_api.py
backend/tests/integration/: conftest.py  test_api_rag_integration.py  test_rag_pipeline.py
backend/vectorstore/: __init__.py  base_vector_store.py  exceptions.py  faiss_vector_store.py  index_manager.py  index_metadata.py  index_serializer.py  vector_store_factory.py
deploy/: prometheus.yml
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG_PROJECT.md  CONFIGURATION.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPER.md  PROJECT_STATE.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  TECHNICAL_DEBT.md
docs/architecture/: 01_system_overview.md  02_project_architecture.md  03_data_flow.md  04_pipeline_design.md  05_metadata_schema.md  06_component_responsibilities.md  07_folder_structure.md  08_document_ingestion_lifecycle.md  09_chunking_lifecycle.md  10_embedding_lifecycle.md  10_evaluation_lifecycle.md  11_experiment_tracking.md  11_vector_store_lifecycle.md  12_future_extensions.md  12_retrieval_lifecycle.md  13_embedding_validation.md  13_generation_lifecycle.md  14_embedding_validation_core.md  14_evaluation_lifecycle.md  15_experiment_tracking.md  16_configuration_strategy.md  17_error_handling_strategy.md  18_logging_strategy.md  19_future_extensions.md  ARCHITECTURE_REVIEW.md  EMBEDDING_PIPELINE_REVIEW_REPORT.md  overview.md
docs/reports/: EMBEDDING_VALIDATION_FINAL_REPORT.md  EMBEDDING_VALIDATION_PRODUCTION_AUDIT.md  EMBEDDING_VALIDATION_TEST_REPORT.md  PHASE10_ARCHITECTURE_SUMMARY.md  PHASE10_FINAL_RELEASE.md  PHASE10_FUTURE_ROADMAP.md  PHASE10_PORTFOLIO_READINESS.md  PHASE10_RESUME_HIGHLIGHTS.md  PHASE8_PRODUCTION_ENGINEERING.md  PHASE9_AUTHENTICATION.md  PHASE9_AUTHORIZATION.md  PHASE9_ENTERPRISE_FEATURES.md  PHASE9_PLATFORM_READINESS.md  PHASE_4_COMPLETION_SUMMARY.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
(+81 files in other folders)
