[project]
name = "retrieval-intelligence-platform"
version = "1.0.0"
description = "Production-grade Retrieval-Augmented Generation platform"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Retrieval Intelligence Platform Team", email = "team@rip.example.com"}
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "llm",
    "machine-learning",
    "nlp",
    "vector-search",
    "embeddings"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "polars>=1.6.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "unstructured>=0.12.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "torch>=2.3.0",
    "tokenizers>=0.19.0",
    "faiss-cpu>=1.8.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "openai>=1.30.0",
    "anthropic>=0.39.0",
    "ragas>=0.2.0",
    "deepeval>=1.0.0",
    "mlflow>=2.13.0",
    "wandb>=0.17.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "redis>=5.0.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "prometheus-client>=0.19.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100.0",
    "ruff>=0.5.0",
    "black>=24.3.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12",
]

[project.urls]
Homepage = "https://github.com/example/retrieval-intelligence-platform"
Repository = "https://github.com/example/retrieval-intelligence-platform"
Issues = "https://github.com/example/retrieval-intelligence-platform/issues"
Documentation = "https://retrieval-intelligence-platform.readthedocs.io"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["backend.tests*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --strict-config"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "requires_api: Tests requiring external API keys",
]

[tool.pytest.asyncio]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "PL"]
ignore = ["E501", "B008", "B904", "PLR0913", "PLR2004", "PLW0603"]

[tool.ruff.lint.per-file-ignores]
# httpx is imported at module level (after class definitions) for streaming
"backend/generation/providers/anthropic_provider.py" = ["E402"]
"backend/generation/providers/nim_provider.py" = ["E402"]
"backend/generation/providers/ollama_provider.py" = ["E402"]
"backend/generation/providers/openai_provider.py" = ["E402"]
# Pre-existing complexity in retrieval modules
"backend/retrieval/sparse/bm25_retriever.py" = ["F841", "B007", "PLR0911", "PLR0912"]
"backend/retrieval/intelligent_retrieval_pipeline.py" = ["PLR0915"]
"backend/vectorstore/faiss_vector_store.py" = ["PLR0912", "PLW2901"]
# Test-specific suppressions (unused loop vars, broad exception captures)
"backend/tests/unit/test_retrieval/test_intelligent_retrieval_pipeline.py" = ["B007", "B017"]
"backend/tests/unit/test_retrieval/test_retrieval_engine.py" = ["B017"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
target-version = ["py311"]
line-length = 100
skip-string-normalization = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
pretty = true
exclude = "(^|/)backend/tests/.*$"

[tool.coverage.run]
source = ["backend"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100